week-4/tribute-styles.css
html, body {
  height: 100%;          
  margin: 0;             
  background-color: #F2F8FA; 
}



.container{
 position:relative;
 margin: 0 auto;
 width: 844px; 
}



h1{
  color:#461500;
  text-align: center;
  font-family: "Playfair Display";
  font-size: 92px;
  font-style: normal;
  font-weight: 600;
  line-height: normal;  ⁨ ⁨
}

h2{
  color: #102D3B;
  text-align: center;
  font-size: 48px;
  font-style: normal;
  font-weight: 300;
  line-height:normal;
}

h3{
  color:#102D3B;
  text-align: center;
  font-family: "Playfair Display";
  font-size:24px;
  font-style: normal;
  font-weight: 550;
  line-height: normal;
}

header{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-image: url('images/pattern.png');
  z-index: -1;
  background-size: 500px;
  
  
}

}

h4{ 
  color:#102D3B;
  font-family: "Noto Sans Devanagari";
  font-size:20px;
  font-style:normal;
  font-weight:400;
  line-height:normal;
}


.portrait-img{
  box-shadow: 0 4px 20px 6px rgba(131, 93, 159, 0.15);   
  background-position: center; 
  width: 844px;            
  height: 1055px;           
  margin: 0 auto;
  width: 835px;
  height:1055px;
  border:8px solid #E0D08C;
}
 
 .text-box{
    background: rgba(235, 222, 226, 0.79);
    border: 8px solid #C09DA8;
    width:838px;
    
  }
  

